deployment-with-route.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okd-sample-app
  namespace: okd-sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: okd-sample-app
  template:
    metadata:
      labels:
        app: okd-sample-app
    spec:
      containers:
      - name: okd-sample-app
        image: image-registry.openshift-image-registry.svc:5000/okd-sample-app/okd-sample-app-TAG:latest
        ports:
        - containerPort: 90
---
apiVersion: v1
kind: Service
metadata:
  name: okd-sample-app
spec:
  selector:
    app: okd-sample-app
  ports:
  - protocol: TCP
    port: 90
    targetPort: 91
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: okd-sample-app
spec:
  to:
    kind: Service
    name: okd-sample-app
  port:
    targetPort: 91
  tls:
    termination: edge
