deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-app
  labels:
    app: simple-web-app
  namespace: simple-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-web-app
  template:
    metadata:
      labels:
        app: simple-web-app
    spec:
      containers:
      - name: simple-web-app
        image: image-registry.openshift-image-registry.svc:5000/simple-web-app/simple-web-app-TAG:latest
        securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
        ports:
        - containerPort: 9090
        volumeMounts:
            - mountPath: /var/cache/nginx
              name: nginx-cache
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
        - name: nginx-cache
          emptyDir: {}   # This creates an empty directory for nginx to write to
---
apiVersion: v1
kind: Service
metadata:
  name: simple-web-app-service
  labels:
    app: simple-web-app
  namespace: simple-web-app
spec:
  selector:
    app: simple-web-app
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9091
  type: ClusterIP

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simple-web-app-route
  namepace: simple-web-app
spec:
  to:
    kind: Service
    name: simple-web-app  # This should match the service name
  port:
    targetPort: 9091  # The port your application is exposing
  tls:
    termination: edge  # Optional: If you want to enable HTTPS
  wildcardPolicy: None
